[package]
name = "cart"
version = "2022.1.21"
edition = "2021"
description = "Purple Land game made with Wasm4"
license = "CNPL-NAv7+"
authors = ["Lavender Perry <endie2@protonmail.com>"]
keywords = ["game", "wasm4"]
categories = ["webassembly", "games"]
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
lazy_static = "1.4.0"
rand = { version = "0.8.4", default-features = false }
rand_pcg = "0.3.1"

[profile.release]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
